# know_demo

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
csv/: plans_general_properties.csv
launch/: generic_semantic_map.launch  memory_generation_with_generic_map.launch  memory_loading_with_generic_map.launch
owl/maps/: generic_semantic_map.owl
rosinstall/: know_demo.rosinstall
scripts/: memory_generation_from_data.py
scripts/sh/: update_shared_file_prolog_reasoning.sh
scripts/ssh/: update_shared_file_prolog_reasoning.sh
src/: __init__.pl
src/know_demo/: utils_module.py
src/prolog_reasoning/: __init__.pl
